# notion-feed.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
src/: _feed.rs  config.rs  feed.rs  main.rs
src/feed/: feed.rs  feed_item.rs  mod.rs  source.rs
src/notion/: client.rs  database.rs  mod.rs  models.rs  page.rs
